Добавлен класс для рассчёта максимального и минимального изменения зарплаты

--- a/laba3TP/laba3TP.csproj
+++ b/laba3TP/laba3TP.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataProcessor.cs" />
     <Compile Include="ForecastCalculator.cs" />
     <Compile Include="SalaryData.cs" />
     <Page Include="MainWindow.xaml">
