Добавил класс для построения графиков Гомер твой метод ниже

--- a/laba3TP/laba3TP.csproj
+++ b/laba3TP/laba3TP.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChartBuilder.cs" />
     <Compile Include="DataLoader.cs" />
     <Compile Include="DataProcessor.cs" />
     <Compile Include="ForecastCalculator.cs" />
